Na overleg met Jeroen

--- a/webapp/src/main/webapp/angtest.html
+++ b/webapp/src/main/webapp/angtest.html
@@ -19,28 +19,28 @@
 </div>
 <hr></hr>
 <div ng-controller="ISISfile">
-	<p></p>
+	<p>file</p>
 	<p>{{ isisdata.value[0].href }}</p>
 	<p>{{ isisdata.value[1].href }}</p>
 	<p>{{ isisdata.value[2].href }}</p>
 </div>
 <hr></hr>
 <div ng-controller="ISISrel">
-	<p></p>
+	<p>relative</p>
 	<p>{{ isisdata.value[0].href }}</p>
 	<p>{{ isisdata.value[1].href }}</p>
 	<p>{{ isisdata.value[2].href }}</p>
 </div>
 <hr></hr>
 <div ng-controller="ISISrelnoauth">
-	<p></p>
+	<p>relative no auth</p>
 	<p>{{ isisdata.value[0].href }}</p>
 	<p>{{ isisdata.value[1].href }}</p>
 	<p>{{ isisdata.value[2].href }}</p>
 </div>
 <hr></hr>
 <div ng-controller="ISISwww">
-	<p></p>
+	<p>www</p>
 	<p>{{ isisdata.value[0].href }}</p>
 	<p>{{ isisdata.value[1].href }}</p>
 	<p>{{ isisdata.value[2].href }}</p>
